--- a/scss/style_index.scss
+++ b/scss/style_index.scss
@@ -1,12 +1,14 @@
+@import "./utils/variables";
 * {
-    overflow:scroll;
+    list-style: none;
 }
-
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
 }
-
+a:link {
+    text-decoration: none;
+}
 header {
     padding-bottom: 10px;
     display: flex;
@@ -21,7 +23,7 @@ header {
     box-shadow: inset 0px 3px 1px rgb(213, 213, 213);
     display: flex;
     justify-content: center;
-    .map_marker {
+    &__icone {
         font-size: 1em;
         margin-top: 15px;
         margin-right: 15px;
@@ -33,11 +35,11 @@ header {
 }
 .explorer {
     height: 300px;
+    background-color: $couleur-fond;
     display: flex;
     flex-direction: column;
-    
     h1 {
-        font-weight: 800;
+        font-weight: 700;
         margin-top: 35px;
         margin-right: 50px;
         margin-left: 50px;
@@ -51,8 +53,8 @@ header {
         margin-left: 25px;
         text-align: center;
     }
-    .bouton_explorer {
-        background: linear-gradient(to bottom right, #FF79DA, #9356DC);
+    .explorer__bouton {
+        background: linear-gradient(to bottom right, $couleur-secondaire, $couleur-primaire);
         color: white;
         border: none;
         margin-top: 20px;
@@ -67,4 +69,126 @@ header {
         box-shadow: 3px 7px 3px rgb(234, 234, 234);
 
     }    
+}
+#fonctionnement {
+    margin-top: 40px;
+    margin-right: 15px;
+    margin-left: 15px;
+}
+.fonctionbloc {
+    display: flex;
+    width: 95%;
+    display: flex;
+    background-color: $couleur-fond;
+    box-shadow: 3px 4px 7px rgb(231, 231, 231);
+    border-radius: 20px;
+    height: 70px;
+    margin-bottom: 15px;
+    margin-left: 15px;
+}
+.fonctionbloc__icone {
+    color: grey;
+    font-size: 18px;
+    margin-top: 24px;
+    margin-left: 30px;
+}
+.fonctionbloc p {
+    font-size: 18px;
+    font-weight: bold;
+    margin-left: 20px;
+    margin-top: 26px;
+}
+.fonctionbloc__numero {
+    font-size: 14px;
+    margin-top: 24px;
+    margin-left: -10px;
+    height: 10px;
+    width: 10px;
+    color: white;
+    background-color: $couleur-primaire;
+    border-radius: 50%;
+    padding-top: 4px;
+    padding-left: 7px;
+    padding-right: 7px;
+    padding-bottom: 10px;
+}
+#restaurants {
+    background-color: $couleur-fond;
+    width: 100%;
+    margin-top: 75px;
+    padding-top: 30px;
+    h2 {
+        margin-left: 20px;
+    }
+}
+.restaurant {
+    background-color: white;
+    width: 330px;
+    height: 250px;
+    max-height: 250px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    position: relative;
+    .nouveau {
+        position: absolute;
+        top: 5%;
+        right: 5%;
+        height: 30px;
+        line-height: 3px;
+        width: 85px;
+        background-color: $couleur-tertiaire;
+        &__texte {
+            font-size: 14px;
+            font-weight: 500;
+            text-align: center;
+            color: darken($couleur-tertiaire, 40);
+        }
+    }
+}
+.restaurant h3 {
+    margin-top: 7px;
+    margin-left: 10px;
+}
+.ville {
+    margin-top: -15px;
+    margin-left: 10px;
+}
+.restaurant__icone {
+    float: right;
+    margin-top: -55px;
+    margin-right: 20px;
+    font-size: 20px;
+}
+.image_restaurant {
+    width: 100%;
+    height: 70%;
+}
+
+footer {
+    background-color: rgb(46, 44, 44);
+    color: white;
+    height: 45vw;
+    padding-top: 10px;
+    h2 {
+        font-size: 17px;
+        font-weight: normal;
+        font-family: 'Shrikhand', cursive;
+        color: white;
+        margin-left: 30px;
+    }
+}
+.icone_ustensiles {
+    font-size: 14px;
+    float: left;
+    margin-right: 10px;
+}
+.icone_partenaire {
+    font-size: 11px;
+    float: left;
+    margin-right: 9px;
+}
+footer li {
+    margin-left: -10px;
+    margin-bottom: 7px;
 }
