--- a/scss/style_index.scss
+++ b/scss/style_index.scss
@@ -5,6 +5,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
+    min-width: 350px;
 }
 a:link {
     text-decoration: none;
@@ -54,6 +55,9 @@ header {
         text-align: center;
     }
     .explorer__bouton {
+        display: block;
+        align-self: center;
+        width: 210px;
         background: linear-gradient(to bottom right, $couleur-secondaire, $couleur-primaire);
         color: white;
         border: none;
@@ -77,7 +81,9 @@ header {
 }
 .fonctionbloc {
     display: flex;
-    width: 95%;
+    width: 350;
+    max-width: 350px;
+    min-width: 350px;
     display: flex;
     background-color: $couleur-fond;
     box-shadow: 3px 4px 7px rgb(231, 231, 231);
@@ -123,24 +129,28 @@ header {
 }
 .restaurant {
     background-color: white;
-    width: 330px;
-    height: 250px;
-    max-height: 250px;
+    width: 90vw;
+    max-width: 370px;
+    min-width: 340px;
+    height: 270px;
+    max-height: 270px;
     margin-bottom: 20px;
     margin-left: 20px;
     margin-right: 20px;
+    border-radius: 20px;
+    box-shadow: 5px 2px 18px rgb(189, 189, 189);
     position: relative;
     .nouveau {
         position: absolute;
         top: 5%;
-        right: 5%;
+        right: 4%;
         height: 30px;
         line-height: 3px;
         width: 85px;
         background-color: $couleur-tertiaire;
         &__texte {
             font-size: 14px;
-            font-weight: 500;
+            font-weight: 600;
             text-align: center;
             color: darken($couleur-tertiaire, 40);
         }
@@ -163,13 +173,16 @@ header {
 .image_restaurant {
     width: 100%;
     height: 70%;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
 }
 
 footer {
     background-color: rgb(46, 44, 44);
     color: white;
-    height: 45vw;
+    height: 170px;
     padding-top: 10px;
+    margin-top: 70px;
     h2 {
         font-size: 17px;
         font-weight: normal;
@@ -191,4 +204,48 @@ footer {
 footer li {
     margin-left: -10px;
     margin-bottom: 7px;
+}
+@media all and (min-width : 520px) {
+    #fonctionnement {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: -50px;
+        margin-left: 0;
+        margin-right: 0;
+        h2 {
+            margin-left: 0;
+            margin-right: 0;
+            width: 100%;
+            height: 50px;
+            line-height: 50px;
+            margin-bottom: 75px;
+            background-color: rgb(234, 234, 234);
+            text-align: center;
+        }
+    }
+    .fonctionbloc {
+        margin-right: 50px;
+    }
+    #restaurants {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: -20px;
+        h2 {
+            margin-left: 0;
+            width: 100%;
+            height: 50px;
+            line-height: 50px;
+            text-align: center;
+            margin-bottom: 75px;
+            background-color: rgb(234, 234, 234);
+        }
+    }
+    .restaurant {
+        margin: 18px;
+    }
+    footer {
+       padding-left: 20%;
+    }
 }
