--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -5,6 +5,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
+  min-width: 350px;
 }
 
 a:link {
@@ -51,7 +52,7 @@ header .logo_ohmyfood {
 
 .explorer {
   height: 300px;
-  background-color: #F2F2F2;
+  background-color: #fffbfb;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -79,6 +80,11 @@ header .logo_ohmyfood {
 }
 
 .explorer .explorer__bouton {
+  display: block;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 210px;
   background: -webkit-gradient(linear, left top, right bottom, from(#FF79DA), to(#9356DC));
   background: linear-gradient(to bottom right, #FF79DA, #9356DC);
   color: white;
@@ -106,9 +112,11 @@ header .logo_ohmyfood {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 95%;
+  width: 350;
+  max-width: 350px;
+  min-width: 350px;
   display: flex;
-  background-color: #F2F2F2;
+  background-color: #fffbfb;
   -webkit-box-shadow: 3px 4px 7px #e7e7e7;
           box-shadow: 3px 4px 7px #e7e7e7;
   border-radius: 20px;
@@ -147,7 +155,7 @@ header .logo_ohmyfood {
 }
 
 #restaurants {
-  background-color: #F2F2F2;
+  background-color: #fffbfb;
   width: 100%;
   margin-top: 75px;
   padding-top: 30px;
@@ -159,19 +167,24 @@ header .logo_ohmyfood {
 
 .restaurant {
   background-color: white;
-  width: 330px;
-  height: 250px;
-  max-height: 250px;
+  width: 90vw;
+  max-width: 370px;
+  min-width: 340px;
+  height: 270px;
+  max-height: 270px;
   margin-bottom: 20px;
   margin-left: 20px;
   margin-right: 20px;
+  border-radius: 20px;
+  -webkit-box-shadow: 5px 2px 18px #bdbdbd;
+          box-shadow: 5px 2px 18px #bdbdbd;
   position: relative;
 }
 
 .restaurant .nouveau {
   position: absolute;
   top: 5%;
-  right: 5%;
+  right: 4%;
   height: 30px;
   line-height: 3px;
   width: 85px;
@@ -180,7 +193,7 @@ header .logo_ohmyfood {
 
 .restaurant .nouveau__texte {
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 600;
   text-align: center;
   color: #278870;
 }
@@ -205,13 +218,16 @@ header .logo_ohmyfood {
 .image_restaurant {
   width: 100%;
   height: 70%;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
 }
 
 footer {
   background-color: #2e2c2c;
   color: white;
-  height: 45vw;
+  height: 170px;
   padding-top: 10px;
+  margin-top: 70px;
 }
 
 footer h2 {
@@ -237,5 +253,60 @@ footer h2 {
 footer li {
   margin-left: -10px;
   margin-bottom: 7px;
+}
+
+@media all and (min-width: 520px) {
+  #fonctionnement {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: -50px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  #fonctionnement h2 {
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    margin-bottom: 75px;
+    background-color: #eaeaea;
+    text-align: center;
+  }
+  .fonctionbloc {
+    margin-right: 50px;
+  }
+  #restaurants {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: -20px;
+  }
+  #restaurants h2 {
+    margin-left: 0;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    margin-bottom: 75px;
+    background-color: #eaeaea;
+  }
+  .restaurant {
+    margin: 18px;
+  }
+  footer {
+    padding-left: 20%;
+  }
 }
 /*# sourceMappingURL=style_index.css.map */
