--- a/scss/style_index.scss
+++ b/scss/style_index.scss
@@ -173,6 +173,7 @@ header {
 .image_restaurant {
     width: 100%;
     height: 70%;
+    object-fit:cover;
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
 }
