--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -218,6 +218,8 @@ header .logo_ohmyfood {
 .image_restaurant {
   width: 100%;
   height: 70%;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-top-right-radius: 20px;
   border-top-left-radius: 20px;
 }
