--- a/scss/style_index.scss
+++ b/scss/style_index.scss
@@ -6,9 +6,56 @@ body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     min-width: 350px;
+    text-decoration: none;
+    text-transform: none;
 }
 a:link {
     text-decoration: none;
+}
+* a {
+    color: black;
+}
+.loader {
+    animation: loader;
+    animation-delay: 2s;
+    animation-fill-mode: both;
+    left: 0;
+    position: fixed;
+    top: 0;
+    z-index: 10000;
+    align-items: center;
+	background-color: #FAFAFA;
+	display: flex;
+	height: 100%;
+	justify-content: center;
+	width: 100%;
+}
+#sparkles > path {
+	animation: sparklyBits 1000ms infinite;
+	position: absolute;
+}
+#message {
+	margin-top: 20px;
+	text-align: center;
+}
+@for $i from 1 through 29 {
+	#sparkles > path:nth-child(#{$i}) {
+		animation-delay: (35ms * $i);
+	}
+}
+@keyframes sparklyBits {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+@keyframes loader {
+    100% {
+        opacity: 0;
+        z-index: -1;
+    }
 }
 header {
     padding-bottom: 10px;
@@ -70,9 +117,14 @@ header {
         padding-right: 20px;
         padding-left: 20px;
         border-radius: 30px;
-        box-shadow: 3px 7px 3px rgb(234, 234, 234);
+        box-shadow: 2px 5px 3px rgb(226, 224, 224);
 
     }    
+    .explorer__bouton:hover {
+        background: linear-gradient(to bottom right, lighten($couleur-secondaire, 5%), lighten($couleur-primaire, 5%));
+        box-shadow: 3px 7px 3px rgb(226, 224, 224);
+
+    }
 }
 #fonctionnement {
     margin-top: 40px;
@@ -91,6 +143,12 @@ header {
     height: 70px;
     margin-bottom: 15px;
     margin-left: 15px;
+}
+.fonctionbloc:hover .fonctionbloc__icone {
+    color: $couleur-primaire
+}
+.fonctionbloc:hover {
+    background-color: darken($couleur-fond, 2%);
 }
 .fonctionbloc__icone {
     color: grey;
@@ -166,9 +224,41 @@ header {
 }
 .restaurant__icone {
     float: right;
+    width: 21px;
+    height: 25px;
     margin-top: -55px;
-    margin-right: 20px;
+    margin-right: 19px;
     font-size: 20px;
+}
+.favoris {
+    float: right;
+    margin-top: -55px;
+    margin-right: 40px;
+    width: 10px;
+    height: 25px;
+}
+.restaurant .fas {
+    background: -webkit-linear-gradient($couleur-secondaire, $couleur-primaire);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 21px;
+    transition: 0.5s ease-in-out;
+    transform: scale(0);
+}
+.far {
+    font-size: 21px;
+
+}
+.restaurant__icone__rempli {
+    width: 21px;
+    height: 25px;
+    transition: all 0.5s ease-in-out;
+    margin-top: -25px;
+    font-size: 20px;
+    transform: scale(0);
+}
+.favoris:hover .fas {
+    transform: scale(1.2)
 }
 .image_restaurant {
     width: 100%;
@@ -191,6 +281,9 @@ footer {
         color: white;
         margin-left: 30px;
     }
+}
+footer a {
+    color: white;
 }
 .icone_ustensiles {
     font-size: 14px;
@@ -247,6 +340,6 @@ footer li {
         margin: 18px;
     }
     footer {
-       padding-left: 20%;
+        padding-left: 7%;
     }
 }
