--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -6,10 +6,229 @@ body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
   min-width: 350px;
+  text-decoration: none;
+  text-transform: none;
 }
 
 a:link {
   text-decoration: none;
+}
+
+* a {
+  color: black;
+}
+
+.loader {
+  -webkit-animation: loader;
+          animation: loader;
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  left: 0;
+  position: fixed;
+  top: 0;
+  z-index: 10000;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #FAFAFA;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+}
+
+#sparkles > path {
+  -webkit-animation: sparklyBits 1000ms infinite;
+          animation: sparklyBits 1000ms infinite;
+  position: absolute;
+}
+
+#message {
+  margin-top: 20px;
+  text-align: center;
+}
+
+#sparkles > path:nth-child(1) {
+  -webkit-animation-delay: 35ms;
+          animation-delay: 35ms;
+}
+
+#sparkles > path:nth-child(2) {
+  -webkit-animation-delay: 70ms;
+          animation-delay: 70ms;
+}
+
+#sparkles > path:nth-child(3) {
+  -webkit-animation-delay: 105ms;
+          animation-delay: 105ms;
+}
+
+#sparkles > path:nth-child(4) {
+  -webkit-animation-delay: 140ms;
+          animation-delay: 140ms;
+}
+
+#sparkles > path:nth-child(5) {
+  -webkit-animation-delay: 175ms;
+          animation-delay: 175ms;
+}
+
+#sparkles > path:nth-child(6) {
+  -webkit-animation-delay: 210ms;
+          animation-delay: 210ms;
+}
+
+#sparkles > path:nth-child(7) {
+  -webkit-animation-delay: 245ms;
+          animation-delay: 245ms;
+}
+
+#sparkles > path:nth-child(8) {
+  -webkit-animation-delay: 280ms;
+          animation-delay: 280ms;
+}
+
+#sparkles > path:nth-child(9) {
+  -webkit-animation-delay: 315ms;
+          animation-delay: 315ms;
+}
+
+#sparkles > path:nth-child(10) {
+  -webkit-animation-delay: 350ms;
+          animation-delay: 350ms;
+}
+
+#sparkles > path:nth-child(11) {
+  -webkit-animation-delay: 385ms;
+          animation-delay: 385ms;
+}
+
+#sparkles > path:nth-child(12) {
+  -webkit-animation-delay: 420ms;
+          animation-delay: 420ms;
+}
+
+#sparkles > path:nth-child(13) {
+  -webkit-animation-delay: 455ms;
+          animation-delay: 455ms;
+}
+
+#sparkles > path:nth-child(14) {
+  -webkit-animation-delay: 490ms;
+          animation-delay: 490ms;
+}
+
+#sparkles > path:nth-child(15) {
+  -webkit-animation-delay: 525ms;
+          animation-delay: 525ms;
+}
+
+#sparkles > path:nth-child(16) {
+  -webkit-animation-delay: 560ms;
+          animation-delay: 560ms;
+}
+
+#sparkles > path:nth-child(17) {
+  -webkit-animation-delay: 595ms;
+          animation-delay: 595ms;
+}
+
+#sparkles > path:nth-child(18) {
+  -webkit-animation-delay: 630ms;
+          animation-delay: 630ms;
+}
+
+#sparkles > path:nth-child(19) {
+  -webkit-animation-delay: 665ms;
+          animation-delay: 665ms;
+}
+
+#sparkles > path:nth-child(20) {
+  -webkit-animation-delay: 700ms;
+          animation-delay: 700ms;
+}
+
+#sparkles > path:nth-child(21) {
+  -webkit-animation-delay: 735ms;
+          animation-delay: 735ms;
+}
+
+#sparkles > path:nth-child(22) {
+  -webkit-animation-delay: 770ms;
+          animation-delay: 770ms;
+}
+
+#sparkles > path:nth-child(23) {
+  -webkit-animation-delay: 805ms;
+          animation-delay: 805ms;
+}
+
+#sparkles > path:nth-child(24) {
+  -webkit-animation-delay: 840ms;
+          animation-delay: 840ms;
+}
+
+#sparkles > path:nth-child(25) {
+  -webkit-animation-delay: 875ms;
+          animation-delay: 875ms;
+}
+
+#sparkles > path:nth-child(26) {
+  -webkit-animation-delay: 910ms;
+          animation-delay: 910ms;
+}
+
+#sparkles > path:nth-child(27) {
+  -webkit-animation-delay: 945ms;
+          animation-delay: 945ms;
+}
+
+#sparkles > path:nth-child(28) {
+  -webkit-animation-delay: 980ms;
+          animation-delay: 980ms;
+}
+
+#sparkles > path:nth-child(29) {
+  -webkit-animation-delay: 1015ms;
+          animation-delay: 1015ms;
+}
+
+@-webkit-keyframes sparklyBits {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes sparklyBits {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes loader {
+  100% {
+    opacity: 0;
+    z-index: -1;
+  }
+}
+
+@keyframes loader {
+  100% {
+    opacity: 0;
+    z-index: -1;
+  }
 }
 
 header {
@@ -98,8 +317,15 @@ header .logo_ohmyfood {
   padding-right: 20px;
   padding-left: 20px;
   border-radius: 30px;
-  -webkit-box-shadow: 3px 7px 3px #eaeaea;
-          box-shadow: 3px 7px 3px #eaeaea;
+  -webkit-box-shadow: 2px 5px 3px #e2e0e0;
+          box-shadow: 2px 5px 3px #e2e0e0;
+}
+
+.explorer .explorer__bouton:hover {
+  background: -webkit-gradient(linear, left top, right bottom, from(#ff93e1), to(#a16be0));
+  background: linear-gradient(to bottom right, #ff93e1, #a16be0);
+  -webkit-box-shadow: 3px 7px 3px #e2e0e0;
+          box-shadow: 3px 7px 3px #e2e0e0;
 }
 
 #fonctionnement {
@@ -123,6 +349,14 @@ header .logo_ohmyfood {
   height: 70px;
   margin-bottom: 15px;
   margin-left: 15px;
+}
+
+.fonctionbloc:hover .fonctionbloc__icone {
+  color: #9356DC;
+}
+
+.fonctionbloc:hover {
+  background-color: #fff1f1;
 }
 
 .fonctionbloc__icone {
@@ -210,9 +444,50 @@ header .logo_ohmyfood {
 
 .restaurant__icone {
   float: right;
+  width: 21px;
+  height: 25px;
   margin-top: -55px;
-  margin-right: 20px;
+  margin-right: 19px;
   font-size: 20px;
+}
+
+.favoris {
+  float: right;
+  margin-top: -55px;
+  margin-right: 40px;
+  width: 10px;
+  height: 25px;
+}
+
+.restaurant .fas {
+  background: -webkit-linear-gradient(#FF79DA, #9356DC);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 21px;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+}
+
+.far {
+  font-size: 21px;
+}
+
+.restaurant__icone__rempli {
+  width: 21px;
+  height: 25px;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  margin-top: -25px;
+  font-size: 20px;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+}
+
+.favoris:hover .fas {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .image_restaurant {
@@ -238,6 +513,10 @@ footer h2 {
   font-family: 'Shrikhand', cursive;
   color: white;
   margin-left: 30px;
+}
+
+footer a {
+  color: white;
 }
 
 .icone_ustensiles {
@@ -308,7 +587,7 @@ footer li {
     margin: 18px;
   }
   footer {
-    padding-left: 20%;
+    padding-left: 7%;
   }
 }
 /*# sourceMappingURL=style_index.css.map */
