--- a/scss/styles_pages.scss
+++ b/scss/styles_pages.scss
@@ -29,7 +29,7 @@ header {
     color: black;
     width: 50px;
     position: relative;
-    top: 5px;
+    top: 12px;
     left: 20px;
     padding-top: 8px;
     font-size: 18px;
@@ -289,6 +289,9 @@ footer {
 footer li {
     margin-left: -10px;
     margin-bottom: 7px;
+}
+footer a {
+    color: white;
 }
 
 @media all and (min-width : 650px) {
