--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -335,12 +335,13 @@ header .logo_ohmyfood {
 }
 
 .fonctionbloc {
+  margin-right: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 350;
+  width: 95%;
   max-width: 350px;
-  min-width: 320px;
+  min-width: 280px;
   display: flex;
   background-color: #fffbfb;
   -webkit-box-shadow: 3px 4px 7px #e7e7e7;
@@ -348,7 +349,7 @@ header .logo_ohmyfood {
   border-radius: 20px;
   height: 70px;
   margin-bottom: 15px;
-  margin-left: 15px;
+  margin-left: auto;
 }
 
 .fonctionbloc:hover .fonctionbloc__icone {
@@ -403,7 +404,7 @@ header .logo_ohmyfood {
   background-color: white;
   width: 90vw;
   max-width: 370px;
-  min-width: 340px;
+  min-width: 320px;
   height: 270px;
   max-height: 270px;
   margin-bottom: 20px;
@@ -413,6 +414,8 @@ header .logo_ohmyfood {
   -webkit-box-shadow: 5px 2px 18px #bdbdbd;
           box-shadow: 5px 2px 18px #bdbdbd;
   position: relative;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .restaurant .nouveau {
@@ -543,9 +546,9 @@ footer li {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
     margin-top: -50px;
     margin-left: 0;
     margin-right: 0;
