--- a/styles/styles_pages.css
+++ b/styles/styles_pages.css
@@ -54,8 +54,6 @@ main {
   margin-left: auto;
   margin-right: auto;
   padding-top: 15px;
-  padding-left: 20px;
-  padding-right: 20px;
   position: relative;
   padding-bottom: 50px;
 }
@@ -117,7 +115,7 @@ main h1 {
 }
 
 .menu {
-  font-size: 14px;
+  font-size: 16px;
   overflow: hidden;
   text-overflow: ellipsis;
   background-color: white;
@@ -126,8 +124,7 @@ main h1 {
   border-radius: 15px;
   height: 65px;
   width: 100%;
-  max-width: 450px;
-  min-width: 330px;
+  min-width: 280px;
   margin-bottom: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -189,12 +186,7 @@ main h1 {
 }
 
 .contenu {
-  -webkit-transition: width;
-  transition: width;
-  -webkit-transition-duration: 500ms;
-          transition-duration: 500ms;
-  -webkit-transition-timing-function: ease-in-out;
-          transition-timing-function: ease-in-out;
+  overflow: hidden;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -202,31 +194,31 @@ main h1 {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   padding-top: 10px;
-  padding-left: 8px;
+  padding-left: 12px;
 }
 
 .categorie_1 {
+  margin: 20px;
+  min-width: 280px;
   -webkit-box-flex: 1;
       -ms-flex: 1 1 0px;
           flex: 1 1 0px;
-  padding-left: 1.5%;
-  padding-right: 1.5%;
 }
 
 .categorie_2 {
+  margin: 20px;
+  min-width: 280px;
   -webkit-box-flex: 1;
       -ms-flex: 1 1 0px;
           flex: 1 1 0px;
-  padding-left: 1.5%;
-  padding-right: 1.5%;
 }
 
 .categorie_3 {
+  margin: 20px;
+  min-width: 280px;
   -webkit-box-flex: 1;
       -ms-flex: 1 1 0px;
           flex: 1 1 0px;
-  padding-left: 1.5%;
-  padding-right: 1.5%;
 }
 
 @-webkit-keyframes delai {
@@ -256,10 +248,10 @@ main h1 {
 }
 
 .confirmation {
-  margin-right: -60px;
+  margin-right: -80px;
   -webkit-transition-duration: 0.5s;
           transition-duration: 0.5s;
-  width: 60px;
+  width: 80px;
   background-color: #99E2D0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -292,7 +284,7 @@ main h1 {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  width: 100%;
+  width: 85%;
   height: 40%;
   margin: 0px;
 }
@@ -406,14 +398,6 @@ footer a {
   }
   footer {
     padding-left: 20%;
-  }
-}
-
-@media all and (min-width: 530px) and (max-width: 780px) {
-  .categorie {
-    -webkit-box-flex: 0.65;
-        -ms-flex: 0.65 1 0px;
-            flex: 0.65 1 0px;
   }
 }
 /*# sourceMappingURL=styles_pages.css.map */
