--- a/styles/styles_pages.css
+++ b/styles/styles_pages.css
@@ -81,7 +81,7 @@ main h1 {
 .favoris .fas {
   font-size: 23px;
   background: -webkit-linear-gradient(#FF79DA, #9356DC);
-  -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-transition: 0.5s ease-in-out;
   transition: 0.5s ease-in-out;
