--- a/scss/styles_pages.scss
+++ b/scss/styles_pages.scss
@@ -72,7 +72,7 @@ main h1 {
 .favoris .fas {
     font-size: 23px;
     background: -webkit-linear-gradient($couleur-secondaire, $couleur-primaire);
-    background-clip: text;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     transition: 0.5s ease-in-out;
     transform: scale(0)
