--- a/scss/styles_pages.scss
+++ b/scss/styles_pages.scss
@@ -295,3 +295,9 @@ footer a {
         padding-left: 20%;
     }
 }
+
+@media all and (min-width: 640px) and (max-width: 960px) {
+    .categorie_3 {
+        max-width: 50%;
+    }
+}
