--- a/styles/styles_pages.css
+++ b/styles/styles_pages.css
@@ -400,4 +400,10 @@ footer a {
     padding-left: 20%;
   }
 }
+
+@media all and (min-width: 640px) and (max-width: 960px) {
+  .categorie_3 {
+    max-width: 50%;
+  }
+}
 /*# sourceMappingURL=styles_pages.css.map */
